kubernetes-kurssi/2/2.7/manifests/service-log.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-app-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
